[gd_scene load_steps=27 format=2]

[ext_resource path="res://scripts/premiacao.gd" type="Script" id=1]
[ext_resource path="res://scenes/fundo2.tscn" type="PackedScene" id=2]
[ext_resource path="res://fontes/premiacao2.fnt" type="BitmapFont" id=3]
[ext_resource path="res://fontes/premiacao1.fnt" type="BitmapFont" id=4]
[ext_resource path="res://sprites/pouparB.png" type="Texture" id=5]
[ext_resource path="res://fontes/premiacao3.fnt" type="BitmapFont" id=6]
[ext_resource path="res://sprites/comprarButtom.png" type="Texture" id=7]
[ext_resource path="res://sprites/b2.png" type="Texture" id=8]
[ext_resource path="res://fontes/mediacao2.fnt" type="BitmapFont" id=9]
[ext_resource path="res://sprites/fundo-premiacao.png" type="Texture" id=10]
[ext_resource path="res://sprites/b3.png" type="Texture" id=11]
[ext_resource path="res://music/click.ogg" type="AudioStream" id=12]
[ext_resource path="res://music/audio-fundo.ogg" type="AudioStream" id=13]
[ext_resource path="res://sprites/moeda.png" type="Texture" id=14]
[ext_resource path="res://sprites/nivelL.png" type="Texture" id=15]
[ext_resource path="res://fontes/premiacao4.fnt" type="BitmapFont" id=16]

[node name="premiacao" type="Node"]

script = ExtResource( 1 )

[node name="fundo 2" parent="." instance=ExtResource( 2 )]


[node name="msg" type="Label" parent="."]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 124.0
margin_top = 528.0
margin_right = 599.0
margin_bottom = 754.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0625, 0.060791, 0.060791, 1 )
text = "Você ganhou 500 moedas o que você deseja fazer com suas moedas?"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="cabecalho" type="Label" parent="."]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 54.0
margin_top = 438.0
margin_right = 667.0
margin_bottom = 538.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Parabéns!!"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="poupar" type="TouchScreenButton" parent="."]

visible = false
position = Vector2( 116, 804 )
scale = Vector2( 0.47, 0.47 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="pouparL" type="Label" parent="."]

visible = false
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 295.0
margin_top = 836.0
margin_right = 586.0
margin_bottom = 942.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.28125, 0.0428467, 0.0428467, 1 )
text = "Poupar"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="comprar" type="TouchScreenButton" parent="."]

visible = false
position = Vector2( 124, 989.272 )
scale = Vector2( 0.47, 0.47 )
normal = ExtResource( 7 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="comprarL" type="Label" parent="."]

visible = false
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 137.0
margin_top = 1014.0
margin_right = 430.0
margin_bottom = 1120.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.278431, 0.0392157, 0.0392157, 1 )
text = "Comprar"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ok" type="TouchScreenButton" parent="."]

visible = false
position = Vector2( 279, 757 )
normal = ExtResource( 8 )
pressed = ExtResource( 8 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="okL" type="Label" parent="."]

visible = false
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 279.0
margin_top = 767.0
margin_right = 437.0
margin_bottom = 843.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
text = "OK"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sombra" type="Sprite" parent="."]

visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 10 )
centered = false

[node name="msg1" type="Label" parent="sombra"]

rect_scale = Vector2( 4, 4 )
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 247.0
margin_top = 1730.0
margin_right = 829.0
margin_bottom = 1821.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Parabéns!!"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="msg2" type="Label" parent="sombra"]

rect_scale = Vector2( 4, 4 )
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 813.0
margin_top = 2077.0
margin_right = 1100.0
margin_bottom = 2266.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Você está no nível 2!!"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ok" type="TouchScreenButton" parent="sombra"]

position = Vector2( 1061.88, 2795.33 )
scale = Vector2( 4, 4 )
normal = ExtResource( 11 )
pressed = ExtResource( 11 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="okL" type="Label" parent="sombra"]

rect_scale = Vector2( 4, 4 )
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 1062.0
margin_top = 2847.0
margin_right = 1221.0
margin_bottom = 2912.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OK"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer1" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = true

[node name="Timer3" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = true

[node name="Timer4" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = true

[node name="click" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 12 )
playing = false
loop = false
volume_db = 0.0
stream_autoplay = false
stream_paused = false
loop_restart_time = 0.0
buffering_ms = 500

[node name="Anim" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="StreamPlayer" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 13 )
playing = false
loop = false
volume_db = 0.0
stream_autoplay = true
stream_paused = false
loop_restart_time = 0.0
buffering_ms = 500

[node name="moeda1" type="Sprite" parent="."]

visible = false
position = Vector2( 186.215, 156.319 )
scale = Vector2( 0.14649, 0.14649 )
texture = ExtResource( 14 )

[node name="moeda2" type="Sprite" parent="."]

visible = false
position = Vector2( 271.732, 63.7503 )
rotation_deg = -16.1
scale = Vector2( 0.228647, 0.228647 )
texture = ExtResource( 14 )
centered = false

[node name="moeda3" type="Sprite" parent="."]

visible = false
position = Vector2( 564.215, 156.319 )
scale = Vector2( 0.14649, 0.14649 )
texture = ExtResource( 14 )
flip_h = true

[node name="Sprite" type="Sprite" parent="."]

position = Vector2( 163.434, 100.801 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 15 )
centered = false

[node name="nivelL" type="Label" parent="."]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 174.0
margin_top = 323.0
margin_right = 538.0
margin_bottom = 406.0
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0.300781, 0.0293732, 0.0293732, 1 )
text = "NÍVEL 1"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed"  from="poupar"  to="." method="_on_poupar_pressed" binds=[  ]]

[connection signal="pressed"  from="comprar"  to="." method="_on_comprar_pressed" binds=[  ]]

[connection signal="pressed"  from="ok"  to="." method="_on_ok_pressed" binds=[  ]]
